[metadata]
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent 

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3   # will run unit test 
    mypy>=0.971     # Check typing error or not 
    flake8>=5.0.4   # will check any mistakes , Extra it is linkting tool 
    tox>=3.25.1      # Create different env 
    black>=22.8.0    # Will check python rules 

[options.package_data]
deepClassifier = py.typed # ignore the errors from packages imported like tensorflow
  
[flake8]
max-line-length = 160
exclude = __init__.py 
